still trying to get fixed navbar working on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,9 +14,14 @@ html {
 
 /* Credit: scroll-behaviour taken from - https://www.w3schools.com/howto/howto_css_smooth_scroll.asp */
 
-.h2 {
-    padding-top: 110px;
-    margin-top: -110px;
+
+.glossary__link {
+  padding: 10px;
+}
+
+h2 {
+  padding-top: 110px;
+  margin-top: -110px;
 }
 
 .navbar {
@@ -32,10 +37,6 @@ html {
 
 .navbar-dark .navbar-nav .nav-link:hover {
     color: #ef8354;
-}
-
-.navbar-brand h2 {
-    font-weight: 600;
 }
 
 .my-profile {
